--- a/article.html
+++ b/article.html
@@ -18,16 +18,16 @@
 			</a>
 			<ul class="nav-warp left clear">
 				<li class="nav-list">
-					<a href="#">土沃叶茂</a>
+					<a href="list.html">土沃叶茂</a>
 				</li>
 				<li class="nav-list">
-					<a href="#">品牌铸就</a>
+					<a href="list.html">品牌铸就</a>
 				</li>
 				<li class="nav-list">
-					<a href="#">名人寄语</a>
+					<a href="list.html">名人寄语</a>
 				</li>
 				<li class="nav-list">
-					<a href="#">贡院遗存</a>
+					<a href="list.html">贡院遗存</a>
 				</li>
 			</ul>
 		</div>
